changed cover imgs and added a content margin to prevent the translation from covering the content

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,6 +44,7 @@ $primaryColor: #9e2a2b;
   background: white;
   padding: 20px;
   min-height: 100vh;
+  padding-bottom: 100px;
 }
 .header1 {
   color: #000;
